--- a/index.html
+++ b/index.html
@@ -3,14 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Review Js</title>
+    <title>Blog</title>
     <!-- <link rel="stylesheet" href="style.css" /> -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Muli:300,400,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-   <div class="container">
-    <h1>Accueil</h1>
-   </div>
-
+    <div class="container">
+      <header>
+        <a href="/" class="header-brand">Blog</a>
+        <nav>
+          <ul>
+            <li><a href="/" class="header-nav active">Home</a></li>
+            <li><a href="./form/form.html" class="header-nav">Create article</a></li>
+          </ul>
+        </nav>
+      </header>
+      <div class="content"></div>
+      <footer>copyright@ 2025 blog</footer>
+    </div>
     <script src="./src/index.js" type="module"></script>
   </body>
 </html>
