--- a/form/form.html
+++ b/form/form.html
@@ -34,7 +34,7 @@
           </div>
           <div class="form-group">
             <label>category</label>
-            <input type="text" name="category"  />
+            <input type="text" name="category" />
           </div>
           <div class="form-group">
             <label>Article</label>
@@ -52,5 +52,6 @@
       <footer>copyright@ 2025 blog</footer>
     </div>
     <script src="./form.js" type="module"></script>
+    <script src="../src/assets/javascripts/topbar.js" type="module"></script>
   </body>
 </html>
