--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
       href="https://fonts.googleapis.com/css?family=Muli:300,400,700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Muli:300,400,700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/97bb762bba.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="container">
@@ -17,13 +25,32 @@
         <nav>
           <ul>
             <li><a href="/" class="header-nav active">Home</a></li>
-            <li><a href="./form/form.html" class="header-nav">Create article</a></li>
+            <li>
+              <a href="./form/form.html" class="header-nav">Create article</a>
+            </li>
           </ul>
         </nav>
       </header>
-      <div class="content"></div>
+      <div class="content">
+        <div class="articles-container">
+          <div class="article">
+            <img
+              src="https://randomuser.me/api/portraits/men/73.jpg"
+              alt="profile"
+            />
+            <h2>Titre de l'article</h2>
+            <p class="article-author">Auteur de l'article</p>
+            <p class="article-content"></p>
+            <div class="article-actions">
+              <button class="btn btn-danger">Supprimer</button>
+              <button class="btn btn-primary">Modifier</button>
+            </div>
+          </div>
+        </div>
+      </div>
       <footer>copyright@ 2025 blog</footer>
     </div>
     <script src="./src/index.js" type="module"></script>
+    <script src="./src/assets/javascripts/topbar.js" type="module"></script>
   </body>
 </html>
